--- a/transactions.html
+++ b/transactions.html
@@ -9,36 +9,18 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet"/>
 <link href="assets/styles.css" rel="stylesheet"/>
 <style>
-  /* Force badge colors - styles.css override se bachne ke liye !important */
-  .tx-badge-credit  { display:inline-block;padding:3px 10px;border-radius:4px;font-size:11px;font-weight:700;background-color:#198754!important;color:#ffffff!important; }
-  .tx-badge-debit   { display:inline-block;padding:3px 10px;border-radius:4px;font-size:11px;font-weight:700;background-color:#0d6efd!important;color:#ffffff!important; }
-  .tx-badge-expense { display:inline-block;padding:3px 10px;border-radius:4px;font-size:11px;font-weight:700;background-color:#ffc107!important;color:#212529!important; }
-  .tx-row-selected td { background-color:#cfe2ff!important; }
-  #filter-search { border:2px solid #0d6efd; }
-  .bulk-bar { display:none; }
-  .bulk-bar.visible { display:flex; }
+  /* Bulk bar hidden by default */
+  #bulk-action-bar { display:none; align-items:center; gap:8px; flex-wrap:wrap; }
 
-  /* ===== PRINT CSS — main page Ctrl+P se print ho to sirf table aaye ===== */
+  /* Print: hide everything except table */
   @media print {
-    /* Hide everything except the transaction table */
-    #navbar-placeholder,
-    #footer-placeholder,
-    .d-flex.justify-content-between.align-items-center.mb-4,
-    .row.g-3.mb-4,
-    .card.shadow-sm.mb-3,
-    #bulk-action-bar,
-    #pagination-container,
-    .card-header,
-    thead .form-check-input,
-    td .d-flex,
-    td button,
-    td input[type="checkbox"],
-    th:first-child,
-    td:first-child,
-    th:last-child,
-    td:last-child
+    #navbar-placeholder, #footer-placeholder,
+    .page-header, .summary-cards, .filters-card,
+    #bulk-action-bar, #pagination-container,
+    .card-header, .action-btns,
+    thead th:first-child, tbody td:first-child,
+    thead th:last-child,  tbody td:last-child
     { display:none !important; }
-
     body { font-size:11px; }
     .container-fluid { padding:0 !important; }
     .card { border:none !important; box-shadow:none !important; }
@@ -46,18 +28,6 @@
     table { font-size:10px; width:100%; border-collapse:collapse; }
     th { background:#1a5276 !important; color:#fff !important; padding:5px 6px; -webkit-print-color-adjust:exact; print-color-adjust:exact; }
     td { padding:4px 6px; border-bottom:1px solid #ddd; }
-
-    /* Print header inject karo */
-    #tx-history-card::before {
-      content: "⛽ Khalid & Sons Petroleum — Transaction Report";
-      display:block;
-      font-size:16px;
-      font-weight:700;
-      color:#1a5276;
-      border-bottom:2px solid #1a5276;
-      padding-bottom:6px;
-      margin-bottom:10px;
-    }
   }
 </style>
 </head>
@@ -66,7 +36,7 @@
 <div class="container-fluid py-3 px-4">
 
   <!-- Header -->
-  <div class="d-flex justify-content-between align-items-center mb-4">
+  <div class="page-header d-flex justify-content-between align-items-center mb-4">
     <h3 class="mb-0"><i class="bi bi-receipt me-2"></i>Transactions</h3>
     <div class="btn-group">
       <button class="btn btn-success" data-bs-target="#newSaleModal" data-bs-toggle="modal">
@@ -82,7 +52,7 @@
   </div>
 
   <!-- Summary Cards -->
-  <div class="row g-3 mb-4">
+  <div class="summary-cards row g-3 mb-4">
     <div class="col-6 col-md-3">
       <div class="card shadow-sm border-success h-100">
         <div class="card-body text-center py-2">
@@ -121,8 +91,8 @@
     </div>
   </div>
 
-  <!-- ===== FILTERS ===== -->
-  <div class="card shadow-sm mb-3">
+  <!-- Filters Card -->
+  <div class="filters-card card shadow-sm mb-3">
     <div class="card-header bg-light py-2">
       <strong><i class="bi bi-funnel me-1"></i>Search &amp; Filters</strong>
     </div>
@@ -130,7 +100,8 @@
       <div class="row g-3 mb-3">
         <div class="col-md-5">
           <label class="form-label small fw-bold"><i class="bi bi-search me-1 text-primary"></i>Search (Customer / Description / Type)</label>
-          <input class="form-control form-control-sm" id="filter-search" type="text" placeholder="e.g. ali, petrol sale, payment..."/>
+          <input class="form-control form-control-sm" id="filter-search" type="text"
+            placeholder="e.g. ali, petrol sale, payment..." style="border:2px solid #0d6efd;"/>
         </div>
         <div class="col-md-4">
           <label class="form-label small fw-bold"><i class="bi bi-person me-1 text-success"></i>Filter by Customer</label>
@@ -170,16 +141,16 @@
     </div>
   </div>
 
-  <!-- ===== SELECTED ROWS BULK ACTIONS (shown when rows selected) ===== -->
-  <div class="alert alert-info py-2 px-3 d-flex align-items-center gap-2 flex-wrap bulk-bar mb-3" id="bulk-action-bar">
-    <span id="bulk-count-label" class="fw-bold me-1">0 selected</span>
-    <button class="btn btn-sm btn-dark" id="btn-print-selected-summary"><i class="bi bi-printer me-1"></i>Print (Summary)</button>
+  <!-- Bulk Action Bar (hidden until rows selected) -->
+  <div class="alert alert-primary py-2 px-3 mb-3" id="bulk-action-bar">
+    <strong id="bulk-count-label">0 selected</strong>
+    <button class="btn btn-sm btn-dark ms-2" id="btn-print-selected-summary"><i class="bi bi-printer me-1"></i>Print (Summary)</button>
     <button class="btn btn-sm btn-success" id="btn-print-selected-monthly"><i class="bi bi-calendar3 me-1"></i>Print (Monthly)</button>
     <button class="btn btn-sm btn-danger" id="btn-delete-selected"><i class="bi bi-trash me-1"></i>Delete Selected</button>
     <button class="btn btn-sm btn-outline-secondary ms-auto" id="btn-clear-selection"><i class="bi bi-x me-1"></i>Clear Selection</button>
   </div>
 
-  <!-- ===== TABLE ===== -->
+  <!-- Table -->
   <div class="card shadow-sm" id="tx-history-card">
     <div class="card-header bg-white d-flex justify-content-between align-items-center">
       <h6 class="mb-0">Transaction History</h6>
@@ -187,27 +158,30 @@
     </div>
     <div class="card-body p-0">
       <div class="table-responsive">
-        <table class="table table-hover table-sm mb-0" id="tx-main-table">
-          <thead class="table-dark">
-            <tr>
-              <th style="width:38px">
-                <input type="checkbox" class="form-check-input mt-0" id="select-all-cb" title="Select All on Page">
+        <table class="table table-hover table-sm mb-0">
+          <thead>
+            <tr style="background:#343a40;color:#ffffff;">
+              <th style="width:42px;background:#343a40;color:#fff;padding:10px 8px;text-align:center;">
+                <input type="checkbox" id="select-all-cb"
+                  style="width:16px;height:16px;cursor:pointer;accent-color:#0d6efd;vertical-align:middle;">
               </th>
-              <th>Date/Time</th>
-              <th>Customer</th>
-              <th>Type</th>
-              <th>Fuel</th>
-              <th>Liters</th>
-              <th>Unit Price</th>
-              <th>Amount</th>
-              <th>Description</th>
-              <th style="width:90px">Actions</th>
+              <th style="background:#343a40;color:#fff;padding:10px 8px;">Date/Time</th>
+              <th style="background:#343a40;color:#fff;padding:10px 8px;">Customer</th>
+              <th style="background:#343a40;color:#fff;padding:10px 8px;">Type</th>
+              <th style="background:#343a40;color:#fff;padding:10px 8px;">Fuel</th>
+              <th style="background:#343a40;color:#fff;padding:10px 8px;">Liters</th>
+              <th style="background:#343a40;color:#fff;padding:10px 8px;">Unit Price</th>
+              <th style="background:#343a40;color:#fff;padding:10px 8px;">Amount</th>
+              <th style="background:#343a40;color:#fff;padding:10px 8px;">Description</th>
+              <th style="background:#343a40;color:#fff;padding:10px 8px;width:90px;">Actions</th>
             </tr>
           </thead>
           <tbody id="transactions-table">
-            <tr><td class="text-center text-muted py-4" colspan="10">
-              <div class="spinner-border spinner-border-sm text-primary me-2"></div>Loading...
-            </td></tr>
+            <tr>
+              <td colspan="10" class="text-center text-muted py-4">
+                <div class="spinner-border spinner-border-sm text-primary me-2"></div>Loading...
+              </td>
+            </tr>
           </tbody>
         </table>
       </div>
@@ -215,9 +189,9 @@
     <div id="pagination-container"></div>
   </div>
 
-</div>
+</div><!-- /container -->
 
-<!-- ==================== NEW SALE MODAL ==================== -->
+<!-- NEW SALE MODAL -->
 <div class="modal fade" id="newSaleModal" tabindex="-1">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
@@ -298,7 +272,7 @@
   </div>
 </div>
 
-<!-- ==================== VASOOLI MODAL ==================== -->
+<!-- VASOOLI MODAL -->
 <div class="modal fade" id="vasooliModal" tabindex="-1">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
@@ -308,10 +282,7 @@
           <button class="btn-close btn-close-white" data-bs-dismiss="modal" type="button"></button>
         </div>
         <div class="modal-body">
-          <div class="mb-3">
-            <label class="form-label">Customer *</label>
-            <select class="form-select" id="vasooli-customer" required><option value="">Select Customer</option></select>
-          </div>
+          <div class="mb-3"><label class="form-label">Customer *</label><select class="form-select" id="vasooli-customer" required><option value="">Select Customer</option></select></div>
           <div class="mb-3">
             <label class="form-label">Fuel Category (Optional)</label>
             <select class="form-select" id="vasooli-fuel-category">
@@ -321,44 +292,22 @@
               <option value="Mixed">Mixed (Both)</option>
             </select>
           </div>
-          <div class="mb-3">
-            <label class="form-label">Liters (Optional)</label>
-            <input class="form-control" id="vasooli-liters" placeholder="Enter liters" step="0.01" type="number"/>
-            <small class="text-muted">Liters enter karein to amount auto-calculate hoga</small>
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Payment Date *</label>
-            <input class="form-control" id="vasooli-date" required type="date"/>
-          </div>
+          <div class="mb-3"><label class="form-label">Liters (Optional)</label><input class="form-control" id="vasooli-liters" placeholder="Enter liters" step="0.01" type="number"/><small class="text-muted">Liters enter karein to amount auto-calculate hoga</small></div>
+          <div class="mb-3"><label class="form-label">Payment Date *</label><input class="form-control" id="vasooli-date" required type="date"/></div>
           <div class="mb-3">
             <label class="form-label">Payment For Month (Optional)</label>
             <select class="form-select" id="vasooli-month">
               <option value="">Select Month</option>
-              <option value="2026-01">January 2026</option>
-              <option value="2026-02">February 2026</option>
-              <option value="2026-03">March 2026</option>
-              <option value="2026-04">April 2026</option>
-              <option value="2026-05">May 2026</option>
-              <option value="2026-06">June 2026</option>
-              <option value="2026-07">July 2026</option>
-              <option value="2026-08">August 2026</option>
-              <option value="2026-09">September 2026</option>
-              <option value="2026-10">October 2026</option>
-              <option value="2026-11">November 2026</option>
-              <option value="2026-12">December 2026</option>
+              <option value="2026-01">January 2026</option><option value="2026-02">February 2026</option>
+              <option value="2026-03">March 2026</option><option value="2026-04">April 2026</option>
+              <option value="2026-05">May 2026</option><option value="2026-06">June 2026</option>
+              <option value="2026-07">July 2026</option><option value="2026-08">August 2026</option>
+              <option value="2026-09">September 2026</option><option value="2026-10">October 2026</option>
+              <option value="2026-11">November 2026</option><option value="2026-12">December 2026</option>
             </select>
           </div>
-          <div class="mb-3">
-            <label class="form-label">Amount Received *</label>
-            <div class="input-group">
-              <span class="input-group-text">Rs.</span>
-              <input class="form-control" id="vasooli-amount" required step="0.01" type="number"/>
-            </div>
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Notes (Optional)</label>
-            <input class="form-control" id="vasooli-description" type="text"/>
-          </div>
+          <div class="mb-3"><label class="form-label">Amount Received *</label><div class="input-group"><span class="input-group-text">Rs.</span><input class="form-control" id="vasooli-amount" required step="0.01" type="number"/></div></div>
+          <div class="mb-3"><label class="form-label">Notes (Optional)</label><input class="form-control" id="vasooli-description" type="text"/></div>
         </div>
         <div class="modal-footer">
           <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Cancel</button>
@@ -369,7 +318,7 @@
   </div>
 </div>
 
-<!-- ==================== EXPENSE MODAL ==================== -->
+<!-- EXPENSE MODAL -->
 <div class="modal fade" id="expenseModal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -379,37 +328,10 @@
           <button class="btn-close" data-bs-dismiss="modal" type="button"></button>
         </div>
         <div class="modal-body">
-          <div class="mb-3">
-            <label class="form-label">Expense Type *</label>
-            <select class="form-select" id="expense-type" required>
-              <option value="">Select Type</option>
-              <option value="Salary">Salary (Tankhuwa)</option>
-              <option value="Bills">Bills (Bijli/Gas)</option>
-              <option value="Maintenance">Maintenance</option>
-              <option value="Fuel Purchase">Fuel Purchase</option>
-              <option value="Other">Other</option>
-            </select>
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Pay From Account *</label>
-            <select class="form-select" id="expense-account" required>
-              <option value="">Select Account</option>
-              <option value="Owner">Owner Account</option>
-              <option value="Cash">Cash</option>
-              <option value="Bank">Bank</option>
-            </select>
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Amount *</label>
-            <div class="input-group">
-              <span class="input-group-text">Rs.</span>
-              <input class="form-control" id="expense-amount" required step="0.01" type="number"/>
-            </div>
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Description *</label>
-            <input class="form-control" id="expense-description" required type="text"/>
-          </div>
+          <div class="mb-3"><label class="form-label">Expense Type *</label><select class="form-select" id="expense-type" required><option value="">Select Type</option><option value="Salary">Salary (Tankhuwa)</option><option value="Bills">Bills (Bijli/Gas)</option><option value="Maintenance">Maintenance</option><option value="Fuel Purchase">Fuel Purchase</option><option value="Other">Other</option></select></div>
+          <div class="mb-3"><label class="form-label">Pay From Account *</label><select class="form-select" id="expense-account" required><option value="">Select Account</option><option value="Owner">Owner Account</option><option value="Cash">Cash</option><option value="Bank">Bank</option></select></div>
+          <div class="mb-3"><label class="form-label">Amount *</label><div class="input-group"><span class="input-group-text">Rs.</span><input class="form-control" id="expense-amount" required step="0.01" type="number"/></div></div>
+          <div class="mb-3"><label class="form-label">Description *</label><input class="form-control" id="expense-description" required type="text"/></div>
         </div>
         <div class="modal-footer">
           <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Cancel</button>
@@ -432,13 +354,11 @@
 </div>
 
 <div id="footer-placeholder"></div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="js/config.js"></script>
 <script src="js/auth.js"></script>
 <script src="js/app.js"></script>
-<!-- SIRF EK FILE - enhancements file bilkul nahi -->
 <script src="js/transactions-COMPLETE.js"></script>
 </body>
 </html>
